<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_temporary_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_temporary_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_title"
        android:textSize="20sp"
        android:textColor="@color/main_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/item_temporary_tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_content"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_temporary_tv_title"/>

    <TextView
        android:id="@+id/item_temporary_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_temporary_tv_content" />

    <TextView
        android:id="@+id/item_temporary_tv_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/item_temporary_tv_date"
        app:layout_constraintTop_toBottomOf="@id/item_temporary_tv_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>