<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerPost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_post_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/item_post_tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_content"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_post_tv_title"/>

    <TextView
        android:id="@+id/item_post_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_post_tv_content" />

    <TextView
        android:id="@+id/item_post_tv_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/item_post_tv_date"
        app:layout_constraintTop_toBottomOf="@id/item_post_tv_content"/>


    <ImageView
        android:id="@+id/item_post_iv_main"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/all_ic_boat_24" />
</androidx.constraintlayout.widget.ConstraintLayout>